--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,19 @@
 .vs/
 .vsconfig/
 *.vsix
+
+Mds.Maui/bin/
+Mds.Maui/obj/
+Mds.Maui/obj/Debug/
+
+*.pdb
+*.dll
+*.json
+*.txt
+*.props
+*.map
+*.manifest
+
+*.apk
+*.aab
+*.so
